name:                gen
version:             0.1.0.0
synopsis:            A simple monad for generating fresh integers
license:             MIT
license-file:        LICENSE
author:              Danny Gratzer
maintainer:          danny.gratzer@gmail.com
category:            Utility

build-type:          Simple

cabal-version:       >=1.10


library
  exposed-modules:     Control.Monad.Gen
  other-extensions:    FlexibleInstances, MultiParamTypeClasses, UndecidableInstances, DeriveFunctor
  build-depends:       base >=4.6 && <5.0, mtl == 2.*, transformers > 0.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  