name:                monad-gen
version:             0.3.0.1
synopsis:            A simple monad for generating fresh integers
description:
    This module provides a simple monad transformer @GenT@ to enumerate unique values within
    a monadic computation. It also plays nicely with everything in the MTL.
homepage:            https://github.com/jozefg/monad-gen
license:             MIT
license-file:        LICENSE
author:              Danny Gratzer
maintainer:          danny.gratzer@gmail.com
category:            Utility
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/jozefg/monad-gen.git

library
  exposed-modules:     Control.Monad.Gen, Control.Monad.Gen.Class
  build-depends:       base >=4 && <5.0, mtl == 2.*, transformers > 0.3
  hs-source-dirs:      src
  default-language:    Haskell2010
